[gd_scene load_steps=8 format=3 uid="uid://bdjhwfsbmclch"]

[ext_resource type="Script" path="res://scenes/map/map1.gd" id="1_0xrv4"]
[ext_resource type="Script" path="res://scenes/map/AllLevel.gd" id="2_c7x2h"]
[ext_resource type="Script" path="res://scenes/map/ButtonLevel.gd" id="3_yyfe6"]
[ext_resource type="Theme" uid="uid://bb4uny0684isq" path="res://resources/theme_button_round.tres" id="4_3p476"]

[sub_resource type="LabelSettings" id="LabelSettings_cfmvt"]
font_size = 20

[sub_resource type="ViewportTexture" id="ViewportTexture_448ow"]

[sub_resource type="LabelSettings" id="LabelSettings_xndhi"]
font_size = 20

[node name="Map1" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0xrv4")

[node name="Khung" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TieuDe" type="HBoxContainer" parent="Khung"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_vertical = 2
alignment = 1

[node name="QuayLai" type="Button" parent="Khung/TieuDe"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "< Quay lại"

[node name="NinePatchRect" type="NinePatchRect" parent="Khung/TieuDe"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="Label" type="Label" parent="Khung/TieuDe"]
layout_mode = 2
size_flags_horizontal = 2
text = "Hành tinh Doggo"
label_settings = SubResource("LabelSettings_cfmvt")

[node name="map" type="NinePatchRect" parent="Khung"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 20.0

[node name="NutTanCong" type="Button" parent="Khung/map"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 0
offset_left = 917.0
offset_top = 446.0
offset_right = 1067.0
offset_bottom = 496.0
size_flags_horizontal = 4
text = "Tấn công !
"
icon = SubResource("ViewportTexture_448ow")

[node name="DoiDoiHinh" type="Button" parent="Khung/map"]
layout_mode = 0
offset_left = 894.0
offset_top = 514.0
offset_right = 1094.0
offset_bottom = 544.0
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 16
text = "Đội hình: diamon dogs"

[node name="AllLevel" type="Node" parent="Khung/map"]
script = ExtResource("2_c7x2h")

[node name="Level1" type="Button" parent="Khung/map/AllLevel"]
offset_left = 591.0
offset_top = 294.0
offset_right = 631.0
offset_bottom = 334.0
theme = ExtResource("4_3p476")
theme_override_font_sizes/font_size = 18
text = "1"
script = ExtResource("3_yyfe6")

[node name="Level2" type="Button" parent="Khung/map/AllLevel"]
offset_left = 295.0
offset_top = 431.0
offset_right = 335.0
offset_bottom = 471.0
theme = ExtResource("4_3p476")
theme_override_font_sizes/font_size = 18
text = "2"

[node name="Level3" type="Button" parent="Khung/map/AllLevel"]
offset_left = 833.0
offset_top = 195.0
offset_right = 873.0
offset_bottom = 235.0
theme = ExtResource("4_3p476")
theme_override_font_sizes/font_size = 18
text = "3"

[node name="Level4" type="Button" parent="Khung/map/AllLevel"]
offset_left = 310.0
offset_top = 98.0
offset_right = 350.0
offset_bottom = 138.0
theme = ExtResource("4_3p476")
theme_override_font_sizes/font_size = 18
text = "4"

[node name="Level5" type="Button" parent="Khung/map/AllLevel"]
offset_left = 227.0
offset_top = 292.0
offset_right = 267.0
offset_bottom = 332.0
theme = ExtResource("4_3p476")
theme_override_font_sizes/font_size = 18
text = "5"

[node name="PhanCuoi" type="VBoxContainer" parent="Khung"]
layout_direction = 1
layout_mode = 2
size_flags_vertical = 4
size_flags_stretch_ratio = 0.0
localize_numeral_system = false

[node name="TieuDe" type="HBoxContainer" parent="Khung/PhanCuoi"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Khung/PhanCuoi/TieuDe"]
layout_mode = 2
size_flags_horizontal = 2
text = "Căn cứ chó - Hành tinh Doggo"
label_settings = SubResource("LabelSettings_xndhi")

[node name="ThucAnChoCho" type="HBoxContainer" parent="Khung/PhanCuoi/TieuDe"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4

[node name="NinePatchRect" type="NinePatchRect" parent="Khung/PhanCuoi/TieuDe/ThucAnChoCho"]
layout_mode = 2
patch_margin_left = 50

[node name="Label" type="Label" parent="Khung/PhanCuoi/TieuDe/ThucAnChoCho"]
layout_mode = 2
size_flags_horizontal = 8
text = "Thức ăn cho chó : 100"
label_settings = SubResource("LabelSettings_xndhi")

[node name="NinePatchRect2" type="NinePatchRect" parent="Khung/PhanCuoi/TieuDe/ThucAnChoCho"]
layout_mode = 2
patch_margin_left = 30

[connection signal="pressed" from="Khung/TieuDe/QuayLai" to="." method="_on_quay_lai_pressed"]
[connection signal="pressed" from="Khung/map/NutTanCong" to="." method="_on_nut_tan_cong_pressed"]
[connection signal="pressed" from="Khung/map/DoiDoiHinh" to="." method="_on_doi_doi_hinh_pressed"]
[connection signal="pressed" from="Khung/map/AllLevel/Level1" to="Khung/map/AllLevel/Level1" method="_on_level_pressed"]
